--- a/src/main/resources/db/db.properties
+++ b/src/main/resources/db/db.properties
@@ -1,4 +1,4 @@
-DB_URL=jdbc:mysql://localhost:3306/laba1
+DB_URL=jdbc:mysql://localhost:3306/laba1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 DB_NAME=laba1
 DB_CHARACTER_ENCODING=UTF-8
 DB_USERNAME=root
